# Adam-vs-EvolutionaryAlgorithms-NN-Training

./: .env  Experiments.ipynb  README.md  pyproject.toml
src/: dataset.py  experiments.ipynb  model.py  train.py  train_adam.py  train_cmaes.py  train_cmaes_1_1.py  train_de.py  utils.py
